--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gsyzjhxz\/weather",
+    "name": "gsyzjhxz\/lixi",
     "description": "A weather SDK",
     "license": "MIT",
     "authors": [
